--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">The New College</string>
     <string name="prayer_timings">PRAYER TIMINGS</string>
+    <string name="select">select</string>
 
 </resources>
